spending behavoral trends are created at analytic page and README.md updated
